--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,8 +71,6 @@ jobs:
   publish-branch:
     runs-on: ubuntu-latest
     needs: [stringify_packages, lint, unit_test]
-    permissions:
-      actions: 'write'
     strategy:
       matrix:
         package_name: ${{ fromJSON(needs.stringify_packages.outputs.packages).names }}
@@ -93,6 +91,7 @@ jobs:
           # Check if a file under packages/path/to/package has changed (added, modified, deleted)
           $SourceDiff = $diff | Where-Object { $_ -match "^packages/$PackageFolderName/" }
           $HasDiff = $SourceDiff.Length -gt 0
+          echo "has diff $HasDiff"
 
           echo "package_changed=$HasDiff" >> $env:GITHUB_OUTPUT
       - name: Setup NodeJS
