--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,6 +90,7 @@ jobs:
 
           # Check if a file under packages/path/to/package has changed (added, modified, deleted)
           $SourceDiff = $diff | Where-Object { $_ -match "^packages/$PackageFolderName/" }
+          echo "source diff $SourceDiff"
           $HasDiff = $SourceDiff.Length -gt 0
           echo "has diff $HasDiff"
 
