--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -144,15 +144,17 @@ jobs:
         id: check_diff
         shell: pwsh
         run: |
-          $diff = git diff --name-only origin/main..HEAD
+          $diff = git diff --name-only HEAD^ HEAD
           echo "git diff main..current: $diff"
 
           $PackageName = "${{ matrix.package_name }}"
           $PackageFolderName = $PackageName.replace("@angulartist/","")
 
           # Check if a file under packages/path/to/package has changed (added, modified, deleted)
+          echo "sourcing path ^packages/$PackageFolderName/"
           $SourceDiff = $diff | Where-Object { $_ -match "^packages/$PackageFolderName/" }
           $HasDiff = $SourceDiff.Length -gt 0
+          echo "has diff $HasDiff"
 
           echo "package_changed=$HasDiff" >> $env:GITHUB_OUTPUT
       - name: Setup NodeJS
