ci: add new package to pipeline

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Stringify packages to $GITHUB_OUTPUT
         id: ref
         run: |
-          echo "packages={\"names\":[\"@angulartist/utilities\"]}" >> $GITHUB_OUTPUT
+          echo "packages={\"names\":[\"@angulartist/utilities\",\"@angulartist/emails-sender\"]}" >> $GITHUB_OUTPUT
 
   build:
     runs-on: ubuntu-latest
